add umuzi to list of demos

--- a/index.html
+++ b/index.html
@@ -6,8 +6,7 @@
     <title>80 Hr Prototype</title>
     <meta
       name="description"
-      content="I am KG, a Full-Stack Software Artisan who works with startups/SMEs to develop rapid software Prototypes in 80 hrs"
-    />
+      content="I am KG, a Full-Stack Software Artisan who works with startups/SMEs to develop rapid software Prototypes in 80 hrs" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
 
     <!-- CSS Dependencies -->
@@ -15,12 +14,10 @@
       href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
       rel="stylesheet"
       integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T"
-      crossorigin="anonymous"
-    />
+      crossorigin="anonymous" />
     <link
       rel="stylesheet"
-      href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css"
-    />
+      href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" />
     <link rel="stylesheet" href="css/shards.min.css?v=3.0.0" />
     <link rel="stylesheet" href="css/shards-extras.min.css?version=3.0.0" />
     <link rel="stylesheet" href="css/custom.css?version=3.0.0" />
@@ -35,8 +32,7 @@
             <img
               src="images/app-promo/shards-logo-green.svg"
               class="mr-2"
-              alt="Shards - Agency Landing Page"
-            />
+              alt="Shards - Agency Landing Page" />
             The 80 Hour Prototype
           </a>
           <button
@@ -46,8 +42,7 @@
             data-target="#navbarNavDropdown"
             aria-controls="navbarNavDropdown"
             aria-expanded="false"
-            aria-label="Toggle navigation"
-          >
+            aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
           <div class="collapse navbar-collapse" id="navbarNavDropdown">
@@ -101,7 +96,7 @@
               My name is KG and I am a Full-Stack Software Artisan
               <a
                 target="_blank"
-                style="color: #51b065;"
+                style="color: #51b065"
                 href="https://www.linkedin.com/in/kgotso-koete-7b066631/"
                 >(Resume)
               </a>
@@ -117,8 +112,7 @@
             <img
               class="iphone-mockup ml-auto"
               src="images/app-promo/iphone-app-mockup.png"
-              alt="iPhone App Mockup - Shards App Promo Demo"
-            />
+              alt="iPhone App Mockup - Shards App Promo Demo" />
           </div>
         </div>
       </div>
@@ -129,8 +123,7 @@
     <!-- Sell-Hub Demo: Small screen -->
     <div
       class="blog section section-invert py-4 big-screen-demos"
-      id="examples"
-    >
+      id="examples">
       <h3 class="section-title text-center m-5">
         Demos of software that I built:
       </h3>
@@ -149,14 +142,15 @@
                       <div class="content">
                         <iframe
                           src="https://sell-hub.web.app/"
-                          style="width: 100%; border: none; height: 100%;"
-                        ></iframe>
+                          style="
+                            width: 100%;
+                            border: none;
+                            height: 100%;
+                          "></iframe>
                       </div>
                     </div>
                     <div class="card-body">
-                      <h4 class="card-title">
-                        Sell Hub: Mobile/hybrid app
-                      </h4>
+                      <h4 class="card-title">Sell Hub: Mobile/hybrid app</h4>
                       <p class="card-text">
                         Sell Hub is a classifieds ads/listing site similar to
                         OLX or Craig's List. Built using Ionic (front end),
@@ -180,11 +174,212 @@
     </div>
     <!-- Sell-Hub Demo: Small screen -->
 
+    <!-- Umuzi Demo: Big screen -->
+    <div
+      class="blog section section-invert py-4 small-screen-demos"
+      id="examples">
+      <h3 class="section-title text-center m-5">
+        Umuzi is a platform for building online communities while giving
+        community members the ability to control access to their content.
+      </h3>
+      <h3 class="section-title text-center m-5">
+        Modified from my Conduit open source app
+      </h3>
+      <h3 class="section-title text-center m-5">
+        Please view on large screen for the best experience
+      </h3>
+      <div class="container">
+        <div class="py-4">
+          <div class="row">
+            <div class="card-deck">
+              <div class="col-md-12 col-lg-12">
+                <div class="card mb-4">
+                  <div class="embed-in-small-screen">
+                    <iframe
+                      class=""
+                      src="https://umuzi.net/"
+                      style="width: 100%; border: none; height: 100%"></iframe>
+                  </div>
+                  <div class="card-body">
+                    <h4 class="card-title">Umuzi Social: Mobile/hybrid app</h4>
+                    <p class="card-text">
+                      Hybrid application that can be viewed on browsers.
+                    </p>
+                    <a
+                      class="btn btn-outline-success btn-pill"
+                      target="_blank"
+                      href="https://umuzi.net/">
+                      Click to see demo &rarr;
+                    </a>
+                  </div>
+                </div>
+              </div>
+
+              <div class="col-md-12 col-lg-12">
+                <div class="card mb-4">
+                  <div class="embed-in-small-screen">
+                    <iframe
+                      src="https://umuzi.net/login"
+                      style="width: 100%; border: none; height: 100%"></iframe>
+                  </div>
+                  <div class="card-body">
+                    <h4 class="card-title">
+                      Umuzi Online Communities: Browser web app
+                    </h4>
+                    <p class="card-text">Angular Browser app</p>
+                    <a
+                      class="btn btn-outline-success btn-pill"
+                      target="_blank"
+                      href="hhttps://umuzi.net/login">
+                      Click to see demo &rarr;</a
+                    >
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+    <!-- Umuzi Demo: Big screen -->
+
+    <!-- Umuzi Demo: Small screen -->
+    <div
+      class="blog section section-invert py-4 big-screen-demos"
+      id="examples">
+      <div class="container">
+        <div class="py-4">
+          <div class="row">
+            <div class="card-deck">
+              <div class="col-md-12 col-lg-12">
+                <div class="card mb-4">
+                  <div class="large-screen-wrapper">
+                    <h4 class="card-title">
+                      <span class="call-to-action">Try the browser app: </span>
+                      Please view on a large screen to compare web vs mobile
+                    </h4>
+                    <div class="large-screen">
+                      <div class="content">
+                        <iframe
+                          src="https://umuzi.net/"
+                          style="
+                            width: 100%;
+                            border: none;
+                            height: 100%;
+                          "></iframe>
+                      </div>
+                    </div>
+                    <div class="card-body">
+                      <h4 class="card-title">
+                        uMuzi Communities: Browser web app
+                      </h4>
+                      <p class="card-text">
+                        Umuzi is a platform for building online communities
+                        while giving community members the ability to control
+                        access to their content. Modified from my Conduit social
+                        blogging app using Angular (front end), Node/Express
+                        (back end) and MongoDB(database). The app was deployed
+                        to Heroku (back-end) and Firebase (front end and media
+                        files)
+                      </p>
+                      <a
+                        class="btn btn-outline-success btn-pill"
+                        target="_blank"
+                        href="https://umuzi.net/">
+                        Click to see demo &rarr;
+                      </a>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+    <!-- Umuzi Demo: Small screen -->
+
+    <!-- Conduit Demo: Big screen -->
+    <div
+      class="blog section section-invert py-4 small-screen-demos"
+      id="examples">
+      <h3 class="section-title text-center m-5">
+        Conduit is a social blogging site similar to Medium/Tumblr.
+      </h3>
+      <h3 class="section-title text-center m-5">
+        Modified from Thinkster's open source app
+      </h3>
+      <h3 class="section-title text-center m-5">
+        Please view on large screen for the best experience
+      </h3>
+      <div class="container">
+        <div class="py-4">
+          <div class="row">
+            <div class="card-deck">
+              <div class="col-md-12 col-lg-12">
+                <div class="card mb-4">
+                  <div class="embed-in-small-screen">
+                    <iframe
+                      class=""
+                      src="https://conduit-mobile-by-kg.web.app/welcome"
+                      style="width: 100%; border: none; height: 100%"></iframe>
+                  </div>
+                  <div class="card-body">
+                    <h4 class="card-title">
+                      Conduit Blogging: Mobile/hybrid app
+                    </h4>
+                    <p class="card-text">
+                      Hybrid application that can be viewed on browsers and
+                      compiled into an android app. Click here to
+                      <a target="_blank" href="./app-debug.apk"
+                        >download the android app &rarr;</a
+                      >
+                    </p>
+                    <a
+                      class="btn btn-outline-success btn-pill"
+                      target="_blank"
+                      href="https://conduit-mobile-by-kg.web.app/welcome"
+                      >Click to see demo &rarr;</a
+                    >
+                  </div>
+                </div>
+              </div>
+
+              <div class="col-md-12 col-lg-12">
+                <div class="card mb-4">
+                  <div class="embed-in-small-screen">
+                    <iframe
+                      src="https://conduit-angular-by-kg.firebaseapp.com/login"
+                      style="width: 100%; border: none; height: 100%"></iframe>
+                  </div>
+                  <div class="card-body">
+                    <h4 class="card-title">
+                      Conduit Blogging: Browser web app
+                    </h4>
+                    <p class="card-text">
+                      Angular Browser app that can also be compiled to android
+                      mobile app with Cordova
+                    </p>
+                    <a
+                      class="btn btn-outline-success btn-pill"
+                      target="_blank"
+                      href="https://conduit-angular-by-kg.firebaseapp.com/login"
+                      >Click to see demo &rarr;</a
+                    >
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+    <!-- Conduit Demo: Big screen -->
+
     <!-- Conduit Demo: Small screen -->
     <div
       class="blog section section-invert py-4 big-screen-demos"
-      id="examples"
-    >
+      id="examples">
       <div class="container">
         <div class="py-4">
           <div class="row">
@@ -200,8 +395,11 @@
                       <div class="content">
                         <iframe
                           src="https://conduit-mobile-by-kg.web.app/welcome"
-                          style="width: 100%; border: none; height: 100%;"
-                        ></iframe>
+                          style="
+                            width: 100%;
+                            border: none;
+                            height: 100%;
+                          "></iframe>
                       </div>
                     </div>
                     <div class="card-body">
@@ -242,8 +440,11 @@
                       <div class="content">
                         <iframe
                           src="https://conduit-angular-by-kg.firebaseapp.com/login"
-                          style="width: 100%; border: none; height: 100%;"
-                        ></iframe>
+                          style="
+                            width: 100%;
+                            border: none;
+                            height: 100%;
+                          "></iframe>
                       </div>
                     </div>
                     <div class="card-body">
@@ -274,86 +475,6 @@
     </div>
     <!-- Conduit Demo: Small screen -->
 
-    <!-- Conduit Demo: Big screen -->
-    <div
-      class="blog section section-invert py-4 small-screen-demos"
-      id="examples"
-    >
-      <h3 class="section-title text-center m-5">
-        Conduit is a social blogging site similar to Medium/Tumblr.
-      </h3>
-      <h3 class="section-title text-center m-5">
-        Modified from Thinkster's open source app
-      </h3>
-      <h3 class="section-title text-center m-5">
-        Please view on large screen for the best experience
-      </h3>
-      <div class="container">
-        <div class="py-4">
-          <div class="row">
-            <div class="card-deck">
-              <div class="col-md-12 col-lg-12">
-                <div class="card mb-4">
-                  <div class="embed-in-small-screen">
-                    <iframe
-                      class=""
-                      src="https://conduit-mobile-by-kg.web.app/welcome"
-                      style="width: 100%; border: none; height: 100%;"
-                    ></iframe>
-                  </div>
-                  <div class="card-body">
-                    <h4 class="card-title">
-                      Conduit Blogging: Mobile/hybrid app
-                    </h4>
-                    <p class="card-text">
-                      Hybrid application that can be viewed on browsers and
-                      compiled into an android app. Click here to
-                      <a target="_blank" href="./app-debug.apk"
-                        >download the android app &rarr;</a
-                      >
-                    </p>
-                    <a
-                      class="btn btn-outline-success btn-pill"
-                      target="_blank"
-                      href="https://conduit-mobile-by-kg.web.app/welcome"
-                      >Click to see demo &rarr;</a
-                    >
-                  </div>
-                </div>
-              </div>
-
-              <div class="col-md-12 col-lg-12">
-                <div class="card mb-4">
-                  <div class="embed-in-small-screen">
-                    <iframe
-                      src="https://conduit-angular-by-kg.firebaseapp.com/login"
-                      style="width: 100%; border: none; height: 100%;"
-                    ></iframe>
-                  </div>
-                  <div class="card-body">
-                    <h4 class="card-title">
-                      Conduit Blogging: Browser web app
-                    </h4>
-                    <p class="card-text">
-                      Angular Browser app that can also be compiled to android
-                      mobile app with Cordova
-                    </p>
-                    <a
-                      class="btn btn-outline-success btn-pill"
-                      target="_blank"
-                      href="https://conduit-angular-by-kg.firebaseapp.com/login"
-                      >Click to see demo &rarr;</a
-                    >
-                  </div>
-                </div>
-              </div>
-            </div>
-          </div>
-        </div>
-      </div>
-    </div>
-    <!-- Conduit Demo: Big screen -->
-
     <!-- Other Examples Section -->
     <div class="blog section section-invert py-4" id="examples">
       <h3 class="section-title text-center m-5">
@@ -373,8 +494,7 @@
                       src="https://www.youtube.com/embed/z7Nk9ZZG9t4"
                       frameborder="0"
                       allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
-                      allowfullscreen
-                    ></iframe>
+                      allowfullscreen></iframe>
                   </div>
                   <div class="card-body">
                     <h4 class="card-title">
@@ -403,8 +523,7 @@
                       src="https://www.youtube.com/embed/kaGekU4ppTk"
                       frameborder="0"
                       allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
-                      allowfullscreen
-                    ></iframe>
+                      allowfullscreen></iframe>
                   </div>
                   <div class="card-body">
                     <h4 class="card-title">
@@ -432,8 +551,7 @@
                       src="https://www.youtube.com/embed/c2dS_BJX-Qc"
                       frameborder="0"
                       allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
-                      allowfullscreen
-                    ></iframe>
+                      allowfullscreen></iframe>
                   </div>
                   <div class="card-body">
                     <h4 class="card-title">
@@ -489,8 +607,7 @@
             data-target="#navbarNav"
             aria-controls="navbarNav"
             aria-expanded="false"
-            aria-label="Toggle navigation"
-          >
+            aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
           <div class="collapse navbar-collapse" id="navbarNav">
@@ -517,17 +634,14 @@
     <script
       src="https://code.jquery.com/jquery-3.2.1.min.js"
       integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4="
-      crossorigin="anonymous"
-    ></script>
+      crossorigin="anonymous"></script>
     <script
       src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.11.0/umd/popper.min.js"
       integrity="sha384-b/U6ypiBEHpOf/4+1nzFpr53nxSS+GLCkfwBdFNTxtclqqenISfwAzpKaMNFNmj4"
-      crossorigin="anonymous"
-    ></script>
+      crossorigin="anonymous"></script>
     <script
       src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
       integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
-      crossorigin="anonymous"
-    ></script>
+      crossorigin="anonymous"></script>
   </body>
 </html>
