add instructions to test the whatsapp

--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
           <div class="col-md-12 mb-4">
             <h4 class="text-center mb-4 font-weight-bold">See it in Action</h4>
             <p class="text-center text-muted lead">
-              Check out our WhatsApp interfaces and helpful AI agents.
+              Check out the WhatsApp interfaces and helpful AI agents.
             </p>
           </div>
 
@@ -221,6 +221,48 @@
           </div>
         </div>
 
+        <!-- Try it Yourself Section -->
+        <div class="row mb-5">
+          <div class="col-md-10 offset-md-1">
+            <div class="card shadow-sm border-0 p-4 bg-light text-center">
+              <h4 class="font-weight-bold mb-3">
+                Try the WhatsApp Experience Yourself
+              </h4>
+              <p class="lead text-muted mb-4">
+                Experience the seamless flow first-hand. <b>Step 1:</b> Register
+                for an account. <b>Step 2:</b> Add your cell number in the
+                profile editor. <b>Step 3:</b> Click the button below to start
+                chatting with the AI!
+              </p>
+              <div
+                class="d-flex justify-content-center flex-wrap align-items-center">
+                <a
+                  href="https://python-flask-whatsapp-equinoxx-fe912329ba9e.herokuapp.com/"
+                  class="btn btn-pill btn-success m-2 px-4 shadow-sm"
+                  target="_blank">
+                  1. Register Here &rarr;
+                </a>
+                <a
+                  href="https://python-flask-whatsapp-equinoxx-fe912329ba9e.herokuapp.com/edit_profile"
+                  class="btn btn-pill btn-outline-success m-2 px-4 shadow-sm"
+                  target="_blank">
+                  2. Add Cell Number &rarr;
+                </a>
+                <a
+                  href="https://wa.me/27833748541"
+                  class="btn btn-pill btn-outline-success m-2 px-4 shadow-sm"
+                  target="_blank">
+                  3. Chat with AI &rarr;
+                </a>
+              </div>
+              <p class="small text-muted mt-3">
+                Updating your profile will trigger real-time notifications to
+                your WhatsApp once you've started the chat!
+              </p>
+            </div>
+          </div>
+        </div>
+
         <hr class="my-5" style="border-top-color: rgba(0, 0, 0, 0.05)" />
 
         <div class="row mt-5">
@@ -233,7 +275,7 @@
               <p
                 class="card-text text-center lead mb-5 mx-auto"
                 style="max-width: 800px">
-                Built with Python Flask, our solution replaces traditional
+                Built with Python Flask, the solution replaces traditional
                 websites with interactive <b>WhatsApp front-ends</b>. Below are
                 glimpses of the viewing and booking interface.
               </p>
