update domain, images, contact details

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <meta http-equiv="x-ua-compatible" content="ie=edge" />
-    <title>WhatsApp Storefront Solutions | 80 Hr Prototype</title>
+    <title>WhatsApp Storefront Solutions | Equinoxx Advisory</title>
     <meta
       name="description"
       content="I am KG. I build rapid WhatsApp storefronts and AI agents for B2B customers. I replace websites with WhatsApp front-ends." />
@@ -33,7 +33,7 @@
               src="images/app-promo/shards-logo-green.svg"
               class="mr-2"
               alt="Shards - Agency Landing Page" />
-            The 80 Hour Prototype
+            Equinoxx Advisory
           </a>
           <button
             class="navbar-toggler"
@@ -53,7 +53,7 @@
                 >
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#examples">Prototype Examples</a>
+                <a class="nav-link" href="#showcase">Showcase</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="#contact">Contact</a>
@@ -90,7 +90,7 @@
         <div class="row">
           <div class="col-lg-5 col-md-5 col-sm-12 mt-auto mb-auto mr-3">
             <h1 class="welcome-heading display-4 text-white">
-              We build WhatsApp Storefronts for B2B Customers
+              Build your WhatsApp Storefronts and AI shopping assistant
             </h1>
             <p class="text-muted">
               My name is KG and I am a Software Artisan. I create engaging
@@ -109,11 +109,19 @@
             <div class="d-block mt-4"></div>
           </div>
 
-          <div class="col-lg-4 col-md-5 col-sm-12 ml-auto">
+          <div class="col-lg-4 col-md-5 col-sm-12">
             <img
-              class="iphone-mockup ml-auto"
-              src="images/app-promo/iphone-app-mockup.png"
-              alt="iPhone App Mockup - Shards App Promo Demo" />
+              class="iphone-mockup d-block"
+              src="images/OxygenB&B/Oxygen_B&B_WhatsApp_Return_Menu.png"
+              alt="WhatsApp Storefront Demo on iPhone"
+              style="
+                width: 200%;
+                max-width: 600px;
+                height: auto;
+                transform: translateX(-25%);
+                margin-top: -50px;
+                filter: drop-shadow(0 20px 50px rgba(0, 0, 0, 0.3));
+              " />
           </div>
         </div>
       </div>
@@ -563,7 +571,8 @@
       <div class="col-12 contact section-invert py-4" id="contact">
         <h3 class="section-title text-center m-5">
           Drop me a line:
-          <div class="contact-email">kgotso.koete@equinoxxadvisory.com</div>
+          <div class="contact-email">kg@equinoxx-advisory.co.za</div>
+          <div class="contact-email">+27 83 374 8541</div>
         </h3>
       </div>
     </div>
@@ -598,7 +607,7 @@
                 >
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#examples">Prototype Examples</a>
+                <a class="nav-link" href="#showcase">Showcase</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="#contact">Contact</a>
