update contact section

--- a/index.html
+++ b/index.html
@@ -570,7 +570,7 @@
     <div class="row">
       <div class="col-12 contact section-invert py-4" id="contact">
         <h3 class="section-title text-center m-5">
-          Drop me a line:
+          Let's connect:
           <div class="contact-email">kg@equinoxx-advisory.co.za</div>
           <div class="contact-email">+27 83 374 8541</div>
         </h3>
