--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>WhatsApp Storefront Solutions | Equinoxx Advisory</title>
     <meta
       name="description"
-      content="I am KG. I build rapid WhatsApp storefronts and AI agents for B2B customers. I replace websites with WhatsApp front-ends." />
+      content="I am KG. I build WhatsApp storefronts and AI agents for B2B customers. I replace websites with WhatsApp front-ends." />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
 
     <!-- CSS Dependencies -->
